<?xml version="1.0"?>
<package format="3">
  <name>motor_controller</name>
  <version>0.0.0</version>
  <description>Motor controller node for RC robot car</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gpiozero</exec_depend>
  <exec_depend>RPi.GPIO</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
